[package]
name = "beats"
version = "0.1.0"
authors = ["Hugo van der Merwe <17109322+hugovdm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["prometheus/process"]
jack = ["cpal/jack"]

[dependencies]
bson = "2.0.0-beta.2"
cpal = "0.13.1"
json = "0.12.4"
lazy_static = "1.4.0"
prometheus = "0.12.0"
ringbuf = "0.2"
rocket = "0.4.5"
thread-id = "3.3.0"
